# NeuroNURBS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dataset.py  network.py  pyproject.toml  requirements.txt  train_vae.sh  trainer.py  utils.py  vae.py
.github/workflows/: ci.yml  release.yml
configs/: Nurbs_ViT_DeepCAD.yml
data_process/: convert_utils.py  deduplicate.sh  deduplicate_cad.py  deduplicate_surfedge.py  process.sh  process_brep.py
helpers/: construct_nurbs.py
helpers/utils/: geom_utils.py  occ_base.py  occ_common.py  occ_construct.py  occ_edge.py  occ_face.py  occ_shell.py  occ_solid.py  occ_utils.py  occ_vertex.py  occ_wire.py  shape.py  tables.py
tests/: conftest.py  test_integration.py  test_utils.py
