[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuronurbs"
version = "0.1.0"
description = "Learning Efficient Surface Representations for 3D Solids via NURBS parameter encoding"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Jiajie Fan", email = "jiajie96@example.com" },
]
keywords = ["NURBS", "B-Rep", "3D CAD", "deep learning", "VAE", "surface representation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "diffusers[torch]==0.27",
    "transformers[torch]==4.44.2",
    "wandb",
    "matplotlib",
    "scipy",
    "trimesh",
    "plyfile",
    "scikit-learn",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/jiajie96/NeuroNURBS"
Paper = "https://arxiv.org/abs/2411.10848"
Issues = "https://github.com/jiajie96/NeuroNURBS/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "F401", "F403", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
